# nostr-keysend-notifier

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: pull_request.yaml  push_master.yaml  rust_clippy.yaml  rust_deps.yaml  rust_fmt.yaml
src/: lib.rs  lnd.rs  main.rs  nostr.rs
