[package]
authors = ["w3irdrobot <rob@w3ird.tech>"]
edition = "2021"
name = "nostr-keysend-notifier"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
config = "0.13.3"
ctrlc = "3.4.1"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.20"
nostr-sdk = "0.23.0"
regex = "1.9.5"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
time = { version = "0.3.28", features = ["formatting"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "fs"] }
tonic_lnd = "0.5.1"
